package com.example.oms;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class OmsApplication {

  public static void main(String[] args) {
    SpringApplication.run(OmsApplication.class, args);
  }

}
