package com.example.oms.dto;

public enum OrderStatus {
  PENDING,
  CONFIRMED,
  CANCELLED,
  SHIPPED,
  DELIVERED
}
