package com.example.oms.dto;

import lombok.Data;

@Data
public class ProductRequest {
  private String name;
  private double basePrice;
}
